test_suite5/ALAN/test_suite/alan-2022-examples/failing/006010_mutation.alan
source Q begin leave 9 = begin relax end end
